fixed gallery becoming too small

--- a/src/styles/appTheme/appBarTheme.scss
+++ b/src/styles/appTheme/appBarTheme.scss
@@ -210,6 +210,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-height: var(--appbar-height);
 }
 
 .top-nav-bottomfree {
